# algo-trader

./: .coveragerc  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  pull-request.yaml
libs/ib_client/: .gitignore  setup.py  tox.ini
libs/ib_client/ibapi/: __init__.py  client.py  commission_report.py  common.py  decoder.py  errors.py  order.py  order_state.py  reader.py  softdollartier.py  tag_value.py  wrapper.py
libs/ib_client/tests/: manual.py  test_account_summary_tags.py  test_comm.py  test_utils.py
scripts/: lint.sh  test-all.bat  test-all.sh  test-integration.bat  test-integration.sh  test-setup.bat  test-setup.sh  test-unit.bat  test-unit.sh
src/: correlation.json  main.py
src/algotrader/: main.py
src/algotrader/assets/: assets_provider.py  correlation_config.json  crypto.symbols  sp500.symbols
src/algotrader/calc/: calculations.py  technicals.py
src/algotrader/cli/: helpers.py  main.py  pipeline.py  processors.py  sources.py  strategies.py
src/algotrader/entities/: base_dto.py  bucket.py  bucketscontainer.py  candle.py  candle_attachments.py  event.py  generic_candle_attachment.py  order_direction.py  serializable.py  strategy.py  strategy_signal.py  timespan.py
src/algotrader/entities/attachments/: assets_correlation.py  nothing.py  returns.py  technicals.py  technicals_buckets_matcher.py  technicals_normalizer.py
src/algotrader/examples/: mongo-history-by-buckets.md
src/algotrader/examples/pipeline-templates/: backtest_history_buckets_backtester.json  backtest_history_similarity_backtester.json  backtest_mongo_source_rsi_strategy.json  backtest_technicals_with_buckets_calculator.json  build_daily_binance_loader.json  build_daily_yahoo_loader.json  build_realtime_binance.json  loader_simple_daily_loader.json  loader_simple_returns_calculator.json  loader_simple_technicals_calculator.json  loader_technicals_with_buckets_matcher.json
src/algotrader/logger/: __init__.py
src/algotrader/market/: async_market_provider.py  async_query_result.py  ib_market.py  market_provider.py
src/algotrader/market/yahoofinance/: history_provider.py
src/algotrader/pipeline/: pipeline.py  processor.py  reverse_source.py  runner.py  shared_context.py  source.py  terminator.py
src/algotrader/pipeline/builders/: __init__.py  backtest.py  loaders.py
src/algotrader/pipeline/configs/: indicator_config.py  technical_processor_config.py
src/algotrader/pipeline/processors/: __init__.py  assets_correlation.py  candle_cache.py  file_sink.py  returns.py  storage_provider_sink.py  strategy.py  technicals.py  technicals_buckets_matcher.py  (+2 more)
src/algotrader/providers/: binance.py
src/algotrader/serialization/: store.py
src/algotrader/storage/: inmemory_storage.py  mongodb_storage.py  storage_provider.py
src/algotrader/trade/: signals_executor.py  simple_sum_signals_executor.py  stdout_signals_executor.py
src/assets/: assets_provider.py  bins.json  correlation.json
src/calc/: technicals.py
src/cli/: helpers.py  main.py  pipeline.py  processors.py  sources.py  strategies.py
src/entities/: bucket.py  bucketscontainer.py  candle.py  candle_attachments.py  event.py  generic_candle_attachment.py  serializable.py  strategy.py
src/examples/: normalize-and-merge-duplicate-candles.md
src/examples/pipeline-templates/: backtest_history_buckets_backtester.json  backtest_history_similarity_backtester.json  backtest_mongo_source_rsi_strategy.json  backtest_technicals_with_buckets_calculator.json  build_daily_yahoo_loader.json  build_realtime_binance.json  loader_simple_daily_loader.json  loader_simple_returns_calculator.json  loader_simple_technicals_calculator.json  loader_technicals_with_buckets_matcher.json
src/libs/ib_client/: MANIFEST.in  README.md
src/log/: __init__.py
src/logger/: __init__.py
src/market/: async_market_provider.py  async_query_result.py
src/market/yahoofinance/: history_provider.py
src/pipeline/: pipeline.py  processor.py  reverse_source.py  runner.py  shared_context.py  source.py  specification.py  terminator.py
src/pipeline/builders/: backtest.py  loader.py  loaders.py
src/pipeline/processors/: __init__.py  assets_correlation.py  candle_cache.py  file_sink.py  mongodb_sink.py  returns.py  storage_provider_sink.py  strategy.py  technicals.py  technicals_buckets_matcher.py  technicals_normalizer.py  timespan_change.py
src/pipeline/sources/: __init__.py  binance_history.py  context_injection_factory_source.py  ib_history.py  list_source.py  mongodb_source.py  yahoo_finance_history.py
src/pipeline/strategies/: __init__.py  connors_rsi2.py  history_bucket_compare.py  history_cosine_similarity.py  simaple_sma.py  simple_sma.py
src/pipeline/terminators/: last_candle_timestamp.py  technicals_binner.py
src/providers/: binance.py
src/providers/ib/: ib_interval.py  interactive_brokers_connector.py  query_subscription.py
src/serialization/: store.py
src/storage/: inmemory_storage.py  mongodb_storage.py  storage_provider.py
src/trade/: signals_executor.py  simple_sum_signals_executor.py  trade_provider.py
tests/configs/: correlations.json
tests/fakes/: pipeline_validators.py  source.py  strategy_executor.py  validator.py
tests/integration/: test_binance_provider.py  test_ib_provider.py  test_ib_source.py  test_yahoo_provider.py  test_yahoo_source.py
tests/unit/: __init__.py  test_asset_correlation.py  test_assets_provider.py  test_async_query_result.py  test_candle_cache.py  test_filesink_processor.py  test_inmemory_storage.py  test_mongo_source.py  test_mongodb_sink_processor.py  test_mongodb_storage.py  test_multiple_pipelines.py  test_returns_calculator_processor.py  test_reverse_source.py  test_serialization.py  test_serializations.py  test_simple_sum_signals_executor.py  test_strategy_processor.py  test_technicals_binner_terminator.py  test_technicals_processor.py  test_timespan_change_processor.py
tests/unit/strategies/: test_history_compare.py  test_simple_sma.py
(+33 files in other folders)
