[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmic-trader"
description = "Trading bot with support for realtime trading, backtesting, custom strategies and much more"
authors = [{ name = "Idan Yael" }]
maintainers = [{ name = "Idan Yael" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["algo-trader", "trading", "backtesting", "strategy", "bot"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "newtulipy==0.4.6",
    "pymongo==3.12.0",
    "mongomock==4.1.2",
    "scipy==1.9.3",
    "yfinance==0.1.87",
    "flake8==5.0.4",
    "typer[all]==0.7.0",
    "coverage==6.5.0",
    "binance-connector==1.18.0",
    "python-dotenv==0.21.0"
]

dynamic = ["version"]

[project.scripts]
algo-trader = "algotrader.cli.main:initiate_cli"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "design", "build", "dist","scripts"]

[project.urls]
homepage = "https://github.com/idanya/algo-trader"
repository = "https://github.com/idanya/algo-trader"
documentation = "https://github.com/idanya/algo-trader/blob/main/README.md"
bug-tracker = "https://github.com/idanya/algo-trader/issues"
