[tool.poetry]
name = "algorithmic-trader"
description = "Trading bot with support for realtime trading, backtesting, custom strategies and much more"
authors = ["Idan Yael"]
maintainers = ["Idan Yael"]
readme = "README.md"
version = "0.0.0"
keywords = ["algo-trader", "trading", "backtesting", "strategy", "bot"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.10"
newtulipy = "0.4.6"
pymongo = "3.12.0"
mongomock = "4.1.2"
scipy = "1.9.3"
yfinance = "0.1.87"
flake8 = "5.0.4"
typer = { version = "0.7.0", extras = ["all"] }
coverage = "7.3.2"
binance-connector = "1.18.0"
python-dotenv = "0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project.scripts]
algo-trader = "algotrader.cli.main:initiate_cli"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "design", "build", "dist", "scripts"]

[project.urls]
homepage = "https://github.com/idanya/algo-trader"
repository = "https://github.com/idanya/algo-trader"
documentation = "https://github.com/idanya/algo-trader/blob/main/README.md"
bug-tracker = "https://github.com/idanya/algo-trader/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
