[tool.poetry]
name = "algorithmic-trader"
description = "Trading bot with support for realtime trading, backtesting, custom strategies and much more"
authors = ["Idan Yael"]
maintainers = ["Idan Yael"]
packages = [{ include = "algotrader", from = "src" }]
readme = "README.md"
version = "0.0.0"
keywords = ["algo-trader", "trading", "backtesting", "strategy", "bot"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.292"
black = "^23.9.1"
pyright = "^1.1.331"

[tool.ruff]
line-length = 120 # Same as Black.
select = ["E", "F"] # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
ignore = [] # Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.
target-version = "py311"
mccabe = {max-complexity=10}

[tool.black]
line-length = 120
preview = true
target-version = ['py311']


[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
newtulipy = "0.4.6"
pymongo = "4.6.0"
mongomock = "4.1.2"
scipy = "1.11.4"
yfinance = "0.2.32"
typer = { version = "0.9.0", extras = ["all"] }
coverage = "7.3.2"
binance-connector = "1.18.0"
python-dotenv = "1.0.0"
ibapi = {path = "libs/ib_client"}
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project.scripts]
algo-trader = "algotrader.cli.main:initiate_cli"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "design", "build", "dist", "scripts"]

[project.urls]
homepage = "https://github.com/idanya/algo-trader"
repository = "https://github.com/idanya/algo-trader"
documentation = "https://github.com/idanya/algo-trader/blob/main/README.md"
bug-tracker = "https://github.com/idanya/algo-trader/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["src/"]
exclude = ["**/node_modules",
    "src/algotrader/providers/ib/",
    "**/__pycache__",
    "libs/",
]
defineConstant = { DEBUG = true }
venv = "env311"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]